--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-Cristian Rua <>
-Milena Montoya <>
+# how AUTHORS it is generated, see `generate-authors.sh`.
+
+Cristian Rua <1858@holbertonschool.com>
+Milena Montoya <mimolmon@gmail.com>
